--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,11 @@
 project:
   type: book
-  post-render:
-  - rm -r ../docs/gb/
-  - cp -r _book/ ../docs/gb/
-  - mv ../docs/gb/Gödelian-Explorations.pdf ../docs/gb/gb.pdf
+  pre-render:
+    - wget -O hypatia-zotero.bib https://dl.dropboxusercontent.com/scl/fi/zu7le8rxs64npx5mge8hl/zotero.bib?rlkey=s6faqqmqmal9gpzbt942wpgyl&dl=1
+  # post-render:
+  # - rm -r ../docs/gb/
+  # - cp -r _book/ ../docs/gb/
+  # - mv ../docs/gb/Gödelian-Explorations.pdf ../docs/gb/gb.pdf
 filters:
   - latex-environment
   - extensions/rtex.lua
@@ -11,7 +13,7 @@ filters:
   - extensions/after.lua
 bibliography:
   - references.bib
-  - /home/hypatia/Workspace/Library/zotero.bib
+  - hypatia-zotero.bib
 csl: glossa.csl
 pdf-engine: xelatex
 reference-location: margin
