--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -13,14 +13,15 @@ jobs:
       - name: Install TeXLive
         uses: teatimeguest/setup-texlive-action@v3
         with:
-          packages: >-
-            scheme-basic
+          package-file: |
+            **/DEPENDS.txt
       - name: Install Packages from APK
         uses: awalsh128/cache-apt-pkgs-action@latest
       - name: Quarto Setup
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           packages: pdf2svg
+          execute_install_scripts: true
           version: 1.0
       - name: Check Env
         run: |
