--- a/.github/workflows/exp.yml
+++ b/.github/workflows/exp.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Custom Quarto Action
-        uses: actions/quarto@v1
+        uses: ./.github/actions/quarto
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload Artifact
